# gfold

./: CMakeLists.txt  Doxyfile  README.md  gfold.cpp  gfold.h  main.cpp
cmake/: DownloadEpigraph.cmake  DownloadMatplotlib.cmake
src/: gfold.h
